--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
  *= require _pdf_viewer.css
  *= require _reviewer.scss
  *= require dispatch/_establish-claims.scss
+ *= require reader/_reader_styles_root.scss
  *= require _style_guide.scss
  *= require react/_react_styles_root.scss
  *= require _dispatch.scss
