--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -4,6 +4,10 @@
     cursor: pointer;
   }
 
+  i {
+    margin: 0px;
+  }
+
   .bordered-icon {
     border: 2px solid grey;
     padding: 1px 2px 0 2px;
@@ -20,5 +24,14 @@
 
   .document-list-receipt-date {
     color: #6b7079;
+  }
+
+  .document-list-comments-indicator {
+    padding-left: 35px;
+  }
+
+  .document-list-comments-indicator-icon {
+    font-weight: bold;
+    margin: 3px;
   }
 }
