Adding tag list css to the document list table

--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -34,4 +34,12 @@
     font-weight: bold;
     margin: 3px;
   }
+
+  .document-list-issue-tag {
+    background: #d6d7d9;
+    border-radius: 3px;
+    padding: 2px 10px 2px 10px;
+    text-align: center;
+    margin: 3px;  
+  }
 }
