Updated css for tags

--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -36,6 +36,7 @@
   }
 
   .document-list-issue-tag {
+    display: inline-block;
     background: #d6d7d9;
     border-radius: 3px;
     padding: 2px 10px 2px 10px;
