added link to dispatch

--- a/app/views/help_dispatch/show.html.erb
+++ b/app/views/help_dispatch/show.html.erb
@@ -53,7 +53,7 @@
   <h2 id="how-to-access">3. How do I access Dispatch?</h2>
 
   <p>
-    Dispatch can be launched in any VA approved web browser, using this URL: https://appeals.cf.ds.va.gov/dispatch/establish-claim. Please confirm with your coach and your Information Security Officer that you are authorized to use Dispatch. 
+    Dispatch can be launched in any VA approved web browser, using this URL:<a href='https://appeals.cf.ds.va.gov/dispatch/establish-claim' target="_blank"> https://appeals.cf.ds.va.gov/dispatch/establish-claim</a>. Please confirm with your coach and your Information Security Officer that you are authorized to use Dispatch. 
   </p>
 
   <h2 id="claims-assigned">4. How are claims assigned to me?</h2>
