added dispatch to the page

--- a/app/views/help_dispatch/show.html.erb
+++ b/app/views/help_dispatch/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title do %>&nbsp &gt &nbspHelp<% end %>
+<% content_for :page_title do %>&nbsp &gt &nbspDispatch<% end %>
 
 <div class="cf-app-segment cf-app-segment--alt cf-help-content">
   <h1 id="#top">Welcome to the Dispatch Help Page!</h1>
