--- a/app/views/tasks/assigned_existing_ep.html.erb
+++ b/app/views/tasks/assigned_existing_ep.html.erb
@@ -8,5 +8,5 @@
     totalCasesCompleted: user_completed_today,
     employeeCount: Rails.cache.read('employee_count') || '0',
     totalCasesToComplete: to_complete_count,
-    secondHeader: task.appeal.veteran_full_name + "'s claim (" + task.appeal.vbms_id + ') has been assigned an EP.'
+    secondHeader: task.appeal.veteran_full_name + "'s claim (" + task.appeal.sanitized_vbms_id + ') has been assigned an EP.'
 }) %>
