--- a/app/views/tasks/complete.html.erb
+++ b/app/views/tasks/complete.html.erb
@@ -1,7 +1,7 @@
 <% content_for :page_title do task.appeal.task_header end %>
 
-<% second_header = task.appeal.veteran_full_name + "'s End Product (" + task.appeal.vbms_id + ') has been created.'
-   second_header = task.appeal.veteran_full_name + "'s claim (" + task.appeal.vbms_id + ') has been processed' if task.special_issue_emailed? or task.special_issue_not_emailed? %>
+<% second_header = task.appeal.veteran_full_name + "'s End Product (" + task.appeal.sanitized_vbms_id + ') has been created.'
+   second_header = task.appeal.veteran_full_name + "'s claim (" + task.appeal.sanitized_vbms_id + ') has been processed' if task.special_issue_emailed? or task.special_issue_not_emailed? %>
 
 <%= react_component("BaseContainer", props: {
     availableTasks: !!current_user_next_task,
