Finishing comment list view

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -241,6 +241,17 @@ select {
   }
 }
 
+.cf-no-padding-btn-link {
+  background: transparent;
+  color: #0071bc;
+  display: inline-block;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: inherit;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .cf-bottom-border {
   border-bottom: 1px solid $color-gray-light;
 }
