--- a/app/views/tasks/assigned_existing_ep.html.erb
+++ b/app/views/tasks/assigned_existing_ep.html.erb
@@ -1,6 +1,6 @@
 <% content_for :page_title do task.appeal.task_header end %>
 <%= react_component('BaseContainer', props: {
-    availableTasks: !!current_user_next_task,
+    availableTasks: tasks.any_assignable_to?(current_user),
     buttonText: start_text,
     checklist: ['Reviewed decision', 'Assigned existing EP to claim'],
     firstHeader: 'Congratulations!',
