--- a/app/views/tasks/worker_index.html.erb
+++ b/app/views/tasks/worker_index.html.erb
@@ -1,6 +1,6 @@
 <%= react_component("BaseContainer", props: {
   page: "CaseWorkerIndex",
-  availableTasks: !!current_user_next_task,
+  availableTasks: tasks.any_assignable_to?(current_user),
   buttonText: start_text,
   completedCountToday: @completed_count_today,
   currentUserHistoricalTasks: current_user_historical_tasks.map(&:to_hash),
