adding link button styling changes and to the style guide (#1504)
* adding link button styling changes and to the style guide

* changing css variable to hex

* Merging css selectors

* Renaming css class

* adding new lines to the component

* updating the placement of css

* changing the sass variable used for background color

* updating this style guide links to use Button component

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -280,3 +280,26 @@ select {
 .cf-secondary-disabled {
   opacity: .25;
 }
+
+// Make a button look like a link
+// caseflow commons
+
+.cf-btn-link {
+  &:hover,
+  &.button-hover {
+    background-color: $color-white;
+    color: $color-primary-darker;
+    text-decoration: underline;
+  }
+
+  &:active,
+  &.button-active {
+    background-color: $color-white;
+    color: $color-primary-darkest;
+    text-decoration: underline;
+  }
+
+  &.usa-button-disabled {
+    color: $color-gray-light;
+  }
+}
