--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -92,8 +92,6 @@ pre {
   margin-right: 2rem;
 }
 
-.cf-btn-link {
-  &.usa-button-disabled {
-    color: $color-gray-light;
-  }
+.styleguide-grey-header {
+  color: $color-gray;
 }
