Removing DocumentLabels in favor of DocumentCategories

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -306,6 +306,15 @@ svg[aria-hidden=true],
   }
 }
 
+/* Use this class when you want the grid to start at the 1/3 point.
+      <empty> <content .cf-pull-right-one-third> <content>
+*/
+.cf-pull-right-one-third {
+  /* This is a one-third width from .usa-width-one-third + 
+     the margin-right from .usa-width-one-third */
+  margin-left: 34.11921734%
+}
+
 .cf-document-category-icons {
   list-style-type: none;
   padding-left: 0;
