--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -61,7 +61,7 @@ $bookmark-yellow: #efdf1a;
 }
 
 .pdfViewer .canvasWrapper {
-  box-shadow: 0 0 3px #color-gray-warm-dark;
+  box-shadow: 0 0 3px $color-gray-warm-dark;
 }
 
 .pdfViewer .page {
@@ -96,6 +96,12 @@ svg[aria-hidden=true],
   text-align: left;
   background: $caseflow-background;
   border-top: 1px solid $color-gray-lighter;
+}
+
+.cf-sidebar-header {
+  height: 50px;
+  background-color: $color-gray-warm-light;
+  line-height: 50px;
 }
 
 .cf-document-info-wrapper {
@@ -173,6 +179,7 @@ svg[aria-hidden=true],
   &:hover {
     text-decoration: none;
     background-color: transparent;
+    color: $color-focus;
   }
 
   &:focus {
