--- a/app/views/help_dispatch/show.html.erb
+++ b/app/views/help_dispatch/show.html.erb
@@ -41,7 +41,7 @@
   <h2 id="what-is-caseflow-dispatch">1. What is Caseflow Dispatch (or Dispatch)?</h2>
 
   <p>
-    Caseflow Dispatch (or Dispatch) allows Claim Assistants at the Appeals Records Center (ARC) to create an End Product (EP) for almost every appeal that reaches the ARC. The EP is assigned to the ARC or to a Regional Office (RO)'s VBMS work queue if the case contains a special issue outside ARC's jurisdiction.
+    Caseflow Dispatch (or Dispatch) allows Claim Assistants at the Appeals Records Center (ARC) to create an End Product (EP) for almost every appeal that reaches the ARC. The EP is assigned to the ARC or to a Regional Office (RO)'s VBMS work queue if the case contains a special issue outside ARC's jurisdiction. <a href ='https://github.com/department-of-veterans-affairs/appeals-training/blob/master/Dispatch/training-materials/Caseflow%20Dispatch_Reference%20Sheet.pdf' target="_blank">https://github.com/department-of-veterans-affairs/appeals-training/blob/master/Dispatch/training-materials/Caseflow%20Dispatch_Reference%20Sheet.pdf</a>
   </p>
 
   <h2 id="what-does-caseflow-dispatch-do">2. How was Dispatch developed? Who was involved?</h2>
