--- a/app/views/help_dispatch/show.html.erb
+++ b/app/views/help_dispatch/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title do %>&nbsp &gt &nbspDispatch<% end %>
+
 
 <div class="cf-app-segment cf-app-segment--alt cf-help-content">
   <h1 id="#top">Welcome to the Dispatch Help Page!</h1>
@@ -22,7 +22,7 @@
     <li><a href="#what-does-caseflow-dispatch-do">2. How was Dispatch developed? Who was involved?</a></li>
     <li><a href="#how-to-access">3. How do I access Dispatch?</a></li>
     <li><a href="#claims-assigned">4. How are claims assigned to me?</a></li>
-    <li><a href="#how-many-claims">5. How do I know how many claims I've completed?</a></li>
+    <li><a href="#how-many-claims">5. How do I know how many claims I have completed?</a></li>
     <li><a href="#veteran-information">6. Where does the Veteran information in the End Product (EP) form come from?</a></li>
     <li><a href="#work-history">7. What does the work history section represent?</a></li>
     <li><a href="#enter-own-document">8. Can I cancel the file retrieval process after it starts?</a></li>
@@ -61,7 +61,7 @@
   <p>
     Dispatch automatically assigns you a pre-set number of claims for the day and routes the next claim in your station's work queue to you as you complete claims. Click "establish claim" to start the next claim in the queue. 
 
-  <h2 id="how-many-claims">5. How do I know how many claims I've completed?</h2>
+  <h2 id="how-many-claims">5. How do I know how many claims I have completed?</h2>
 
   <p>
      The work history section provides a list of the claims that you have processed that day. 
