--- a/app/views/help_dispatch/show.html.erb
+++ b/app/views/help_dispatch/show.html.erb
@@ -1,5 +1,4 @@
 
-
 <div class="cf-app-segment cf-app-segment--alt cf-help-content">
   <h1 id="#top">Welcome to the Dispatch Help Page!</h1>
   
@@ -23,13 +22,7 @@
     <li><a href="#how-to-access">3. How do I access Dispatch?</a></li>
     <li><a href="#claims-assigned">4. How are claims assigned to me?</a></li>
     <li><a href="#how-many-claims">5. How do I know how many claims I have completed?</a></li>
-    <li><a href="#veteran-information">6. Where does the Veteran information in the End Product (EP) form come from?</a></li>
-    <li><a href="#work-history">7. What does the work history section represent?</a></li>
-    <li><a href="#enter-own-document">8. Can I cancel the file retrieval process after it starts?</a></li>
-    <li><a href="#send-claim">9. How do I send the claim to a particular RO?</a></li>
-    <li><a href="#add-note">10. Can I add a note to the RO while in Dispatch?</a></li>
-    <li><a href="#appeals-process">11. Are there any appeals that I can't process using Dispatch?</a></li>
-    <li><a href="#cancel-process">12. How can I cancel the process?</a></li>
+    <li><a images/cancel-process">12. How can I cancel the process?</a></li>
     <li><a href="#select-wrong-special-issue">13.What happens if I accidentally select the wrong special issue or forget to select one?</a></li>
     <li><a href="#encounter-problems">14. What should I do if I encounter problems</a></li>
     <li><a href="#share-feedback">15. How do I share my feedback for improving Dispatch?</a></li>
@@ -41,7 +34,7 @@
   <h2 id="what-is-caseflow-dispatch">1. What is Caseflow Dispatch (or Dispatch)?</h2>
 
   <p>
-    Caseflow Dispatch (or Dispatch) allows Claim Assistants at the Appeals Records Center (ARC) to create an End Product (EP) for almost every appeal that reaches the ARC. The EP is assigned to the ARC or to a Regional Office (RO)'s VBMS work queue if the case contains a special issue outside ARC's jurisdiction. <a href ='https://github.com/department-of-veterans-affairs/appeals-training/blob/master/Dispatch/training-materials/Caseflow%20Dispatch_Reference%20Sheet.pdf' target="_blank">https://github.com/department-of-veterans-affairs/appeals-training/blob/master/Dispatch/training-materials/Caseflow%20Dispatch_Reference%20Sheet.pdf</a>
+    Caseflow Dispatch (or Dispatch) allows Claim Assistants at the Appeals Records Center (ARC) to create an End Product (EP) for almost every appeal that reaches the ARC. The EP is assigned to the ARC or to a Regional Office (RO)'s VBMS work queue if the case contains a special issue outside ARC's jurisdiction. Learn more:[Caseflow Dispatch Quick Reference Guide] <a href= "/images/caseflow-login.png" >Dispatch</a>
   </p>
 
   <h2 id="what-does-caseflow-dispatch-do">2. How was Dispatch developed? Who was involved?</h2>
