Lint and test errors

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -243,7 +243,7 @@ select {
 
 .cf-no-padding-btn-link {
   background: transparent;
-  color: #0071bc;
+  color: $color-primary;
   display: inline-block;
   font-weight: normal;
   line-height: 1;
