Making sidebar header

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -100,8 +100,9 @@ svg[aria-hidden=true],
 
 .cf-sidebar-header {
   height: 50px;
-  background-color: $color-gray-warm-light;
+  background-color: $color-gray-lightest;
   line-height: 50px;
+  color: $color-gray-dark;
 }
 
 .cf-document-info-wrapper {
