--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -290,6 +290,14 @@ svg[aria-hidden=true],
   position: relative;
 }
 
+.cf-dropdown-filter {
+  position: absolute;
+  border: 1px solid #d6d7d9;
+  background: white;
+  padding: 5px;
+  box-shadow: 5px 5px 4px -3px #d6d7d9;
+}
+
 .cf-document-category-picker {
   list-style-type: none;
   padding-left: 0;
