--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -308,6 +308,10 @@ svg[aria-hidden=true],
         margin-bottom: 0;
       }
     }
+
+    li:hover {
+      background-color: #5B616B;
+    }
   }
 }
 
