--- a/app/assets/stylesheets/_dispatch.scss
+++ b/app/assets/stylesheets/_dispatch.scss
@@ -9,6 +9,27 @@
   }
 }
 
+.cf-vbms-note {
+  position: relative;
+
+  .cf-form-textarea {
+    width: 80%;
+    margin-left: 100px;
+}
+
+  .question-label {
+    font-weight: bold !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+  .copy-note-button {
+    width: 80%;
+    margin-left: 100px;
+ }
+}
+
 .inline-label {
   display: inline-block;
   width: 18%;
@@ -48,3 +69,8 @@ input {
     background: transparent;
   }
 }
+
+.copy-note-button {
+  margin-top: 17px;
+  margin-bottom: 35px;
+ }
