update commons gem

--- a/app/assets/stylesheets/_dispatch.scss
+++ b/app/assets/stylesheets/_dispatch.scss
@@ -18,7 +18,7 @@
 }
 
   .question-label {
-    font-weight: bold !important;
+    font-weight: bold;
     position: absolute;
     top: 0;
     left: 0;
