--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -60,15 +60,6 @@ $bookmark-yellow: #efdf1a;
   width: 100%;
 }
 
-.pdfViewer .canvasWrapper {
-  box-shadow: 0 0 3px $color-gray-warm-dark;
-}
-
-.pdfViewer .page {
-  margin-bottom: 10px;
-  border-image: none;
-}
-
 .annotationLayer {
   position: absolute;
   top: 0;
@@ -100,7 +91,7 @@ svg[aria-hidden=true],
 
 .cf-sidebar-header {
   height: 50px;
-  background-color: $color-gray-lightest;
+  background-color: $color-gray-warm-light;
   line-height: 50px;
   color: $color-gray-dark;
 }
@@ -112,7 +103,7 @@ svg[aria-hidden=true],
 .cf-comment-wrapper {
   padding: 0 30px;
   position: absolute;
-  top: 345px;
+  top: 305px;
   bottom: 0;
   width: 380px;
   overflow-y: scroll;
@@ -233,7 +224,9 @@ svg[aria-hidden=true],
 }
 
 .pdfViewer.singlePageView .page {
-  margin: auto;
+  box-shadow: 0 0 5px $color-gray-dark;
+  margin: 5px;
+  border-image: none;
   z-index: 5;
 }
 
