changes to show file

--- a/app/assets/stylesheets/_dispatch.scss
+++ b/app/assets/stylesheets/_dispatch.scss
@@ -48,3 +48,11 @@ input {
     background: transparent;
   }
 }
+
+.cf-help-content {
+  &.cf-dispatch {
+    h1:not(:first-child) {
+      margin-top: 100px;
+    }
+  }
+}
