--- a/app/views/help_dispatch/show.html.erb
+++ b/app/views/help_dispatch/show.html.erb
@@ -1,15 +1,13 @@
 
-<div class="cf-app-segment cf-app-segment--alt cf-help-content">
+<div class="cf-app-segment cf-app-segment--alt cf-help-content cf-dispatch">
   <h1 id="#top">Welcome to the Dispatch Help Page!</h1>
   
-  <p>Here you will find <font color="#0872b9"><a href="#training-videos">Training Videos </font></a>and<font color="#0872b9"><a href="#faq"> FAQs </font></a>to Dipatch. If you still need help please contact the Caseflow Product Support Team by calling 1-844-876-5548. We will assist you as quickly as possible. </p>
-        <br>
-
+  <p>Here you will find <a href="#training-videos">Training Videos</a> and <a href="#faq">FAQs</a> to Dipatch. If you still need help please contact the Caseflow Product Support Team by calling 1-844-876-5548. We will assist you as quickly as possible. </p>
+   
    <h1 id="training-videos">Training Videos</h1>
      <div class="cf-help-divider"></div>
-        <br>
+        
         <p><font size="6">Coming Soon</font></p>
-        <br>
    
     <h1 id="faq">Frequently Asked Questions</h1>
 
@@ -17,18 +15,17 @@
 
      
   <ul id="toc" class="usa-unstyled-list">
-    <li><a href="#what-is-caseflow-dispatch">1. What is Caseflow Dispatch (or Dispatch)?</a></li>
-    <li><a href="#what-does-caseflow-dispatch-do">2. How was Dispatch developed? Who was involved?</a></li>
-    <li><a href="#how-to-access">3. How do I access Dispatch?</a></li>
-    <li><a href="#claims-assigned">4. How are claims assigned to me?</a></li>
-    <li><a href="#how-many-claims">5. How do I know how many claims I have completed?</a></li>
-    <li><a images/cancel-process">12. How can I cancel the process?</a></li>
-    <li><a href="#select-wrong-special-issue">13.What happens if I accidentally select the wrong special issue or forget to select one?</a></li>
-    <li><a href="#encounter-problems">14. What should I do if I encounter problems</a></li>
-    <li><a href="#share-feedback">15. How do I share my feedback for improving Dispatch?</a></li>
-    <li><a href="#need-help">16. What if I still need help?</a></li>
+    <li><a href="#what-is-caseflow-dispatch">What is Caseflow Dispatch (or Dispatch)?</a></li>
+    <li><a href="#what-does-caseflow-dispatch-do">How was Dispatch developed? Who was involved?</a></li>
+    <li><a href="#how-to-access">How do I access Dispatch?</a></li>
+    <li><a href="#claims-assigned">How are claims assigned to me?</a></li>
+    <li><a href="#how-many-claims">How do I know how many claims I have completed?</a></li>
+    <li><a href="#cancel-process">How can I cancel the process?</a></li>
+    <li><a href="#select-wrong-special-issue">What happens if I accidentally select the wrong special issue or forget to select one?</a></li>
+    <li><a href="#encounter-problems">What should I do if I encounter problems</a></li>
+    <li><a href="#share-feedback">How do I share my feedback for improving Dispatch?</a></li>
+    <li><a href="#need-help">What if I still need help?</a></li>
   </ul>
-     <br>
   <div class="cf-help-divider"></div>
 
   <h2 id="what-is-caseflow-dispatch">1. What is Caseflow Dispatch (or Dispatch)?</h2>
