Add Reader Role (#1625)
* Adding new role

* Fixing tests

* Fix the id

* Adding constants

* Changing to arrays

* RUBOCOOOP

--- a/app/views/test/users/index.html.erb
+++ b/app/views/test/users/index.html.erb
@@ -18,6 +18,8 @@
       <p><a href="/certifications/new/789C">Already Certified</a></p>
       <p><a href="/certifications/new/000ERR">VBMS Error</a></p>
       <p><a href="/certifications/new/001ERR">Unable to Certify</a></p>
+      <h2>Reader</h2>
+      <p><a href="/reader/appeal/reader_id1/documents">Case File</a></p>
       <h2>Misc.</h2>
       <p><a href="/styleguide">Commons Style Guide</a></p>
       <p><a href="/stats">Stats</a></p>
