List view comments (#1554)
* Adding comment view on list view page

* Finishing comment list view

* Add tests and cleaning up

* Addressing Nick's comments

* Updating the list styling

* Lint and test errors

* Fixing merge

* Addressing comments

* Adding redux for comment list view

* Lint errors

* Adding seeds and more redux!

* More redux!

* Fixing up tests

* Addressing last comments

* Adding test

--- a/app/assets/stylesheets/react/_comment.scss
+++ b/app/assets/stylesheets/react/_comment.scss
@@ -3,8 +3,8 @@
 
 .comment-control-button-container {
   display: inline-block;
-  text-align: right;
   width: 100%;
+  padding: 3px 0;
 }
 
 .comment-control-button {
@@ -22,7 +22,17 @@
 .comment-container {
   background-color: $color-white;
   border-radius: 3px;
-  padding: 20px;
-  margin-bottom: 10px;
+  padding: 15px;
+  margin-bottom: 15px;
   border: 1px solid $color-gray-lighter;
+  max-width: 625px;
+}
+
+.comment-horizontal-container {
+  display: inline-block;
+  width: 100%;
+}
+
+.comment-horizontal-spacing {
+  margin-right: 49px;
 }
