--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -281,9 +281,13 @@ select {
   opacity: .25;
 }
 
+.cf-no-styling-list {
+  margin: 0;
+  padding: 0;
+}
+
 // Make a button look like a link
 // caseflow commons
-
 .cf-btn-link {
   &:hover,
   &.button-hover {
