changes made dispatch view

--- a/app/views/help/dispatch.html.erb
+++ b/app/views/help/dispatch.html.erb
@@ -15,16 +15,22 @@
 
      
   <ul id="toc" class="usa-unstyled-list">
-    <li><a href="#what-is-caseflow-dispatch">What is Caseflow Dispatch (or Dispatch)?</a></li>
-    <li><a href="#what-does-caseflow-dispatch-do">How was Dispatch developed? Who was involved?</a></li>
-    <li><a href="#how-to-access">How do I access Dispatch?</a></li>
-    <li><a href="#claims-assigned">How are claims assigned to me?</a></li>
-    <li><a href="#how-many-claims">How do I know how many claims I have completed?</a></li>
-    <li><a href="#cancel-process">How can I cancel the process?</a></li>
-    <li><a href="#select-wrong-special-issue">What happens if I accidentally select the wrong special issue or forget to select one?</a></li>
-    <li><a href="#encounter-problems">What should I do if I encounter problems</a></li>
-    <li><a href="#share-feedback">How do I share my feedback for improving Dispatch?</a></li>
-    <li><a href="#need-help">What if I still need help?</a></li>
+    <li><a href="#what-is-caseflow-dispatch">1. What is Caseflow Dispatch (or Dispatch)?</a></li>
+    <li><a href="#what-does-caseflow-dispatch-do">2. How was Dispatch developed? Who was involved?</a></li>
+    <li><a href="#how-to-access">3. How do I access Dispatch?</a></li>
+    <li><a href="#claims-assigned">4. How are claims assigned to me?</a></li>
+    <li><a href="#how-many-claims">5. How do I know how many claims I have completed?</a></li>
+    <li><a href="#veteran-information">6. Where does the Veteran information in the End Product (EP) form come from?</a></li>
+    <li><a href="#work-history">7. What does the work history section represent?</a></li>
+    <li><a href="#enter-own-document">8. Can I enter my own document type/EP options?</a></li>
+    <li><a href=#"send-claim">9. How do I send the claim to a particular RO?</a></li>
+    <li><a href=#"add-note">10. Can I add a note to the RO while in Dispatch?</a></li>
+    <li><a href=#"appeals-process">11. Are there any appeals that I can't process using Dispatch?
+    <li><a href="#cancel-process">12. How can I cancel the process?</a></li>
+    <li><a href="#select-wrong-special-issue">13. What happens if I accidentally select the wrong special issue or forget to select one?</a></li>
+    <li><a href="#encounter-problems">14. What should I do if I encounter problems</a></li>
+    <li><a href="#share-feedback">15. How do I share my feedback for improving Dispatch?</a></li>
+     <li><a href="#need-help">16. What if I still need help?</a></li>
   </ul>
   <div class="cf-help-divider"></div>
 
