--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -89,6 +89,8 @@ svg[aria-hidden=true],
 }
 
 .cf-sidebar-header {
+  padding-left: 20px;
+  margin-bottom: 10px;
   height: 50px;
   background-color: $color-gray-warm-light;
   line-height: 50px;
@@ -102,7 +104,7 @@ svg[aria-hidden=true],
 .cf-comment-wrapper {
   padding: 0 30px;
   position: absolute;
-  top: 338px;
+  top: 336px;
   bottom: 0;
   width: 380px;
   overflow-y: scroll;
@@ -198,10 +200,9 @@ svg[aria-hidden=true],
   }
 }
 
-.cf-heading-alt {
+.cf-heading-comments {
   border-bottom: 1px solid $color-gray-lighter;
-  padding-bottom: 5px;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
   margin-top: 30px;
   font-size: 13px;
   font-weight: 400;
@@ -210,12 +211,11 @@ svg[aria-hidden=true],
 }
 
 .cf-add-comment-button {
-  margin-top: -20px;
+  margin-top: -15px;
 }
 
 .cf-pdf-meta-title {
-  margin-top: 0;
-  margin-bottom: 10px;
+  margin: 0;
 }
 
 .cf-full-page-app {
