WIP Sandra/helppage (#1614)
* dispatch help page

* added link to dispatch

* added dispatch to the page

* added dispatch helppage

* removed this file

* pdf

* added tests

* rspec tests

* added pdf

* added show file

* added dispatch to public

* made changes to show file

* made indent changes

* changes to show file

* changes to help page

* modified help controller

* changes made dispatch view

* added styles to page

* made changes to dispatch help page

* removed dispatch route

--- a/app/assets/stylesheets/_dispatch.scss
+++ b/app/assets/stylesheets/_dispatch.scss
@@ -48,3 +48,12 @@ input {
     background: transparent;
   }
 }
+
+.cf-help-content {
+  &.cf-dispatch {
+    h1:not(:first-child) {
+      margin-top: 40px;
+    }
+  }
+}
+
