--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -104,7 +104,7 @@ svg[aria-hidden=true],
 .cf-comment-wrapper {
   padding: 0 30px;
   position: absolute;
-  top: 336px;
+  top: 328px;
   bottom: 0;
   width: 380px;
   overflow-y: scroll;
@@ -116,6 +116,7 @@ svg[aria-hidden=true],
   height: 50px;
   color: $color-white;
   font-size: 15px;
+  max-width: 100%;
 }
 
 .cf-pdf-header {
@@ -202,7 +203,7 @@ svg[aria-hidden=true],
 
 .cf-heading-comments {
   border-bottom: 1px solid $color-gray-lighter;
-  padding-bottom: 20px;
+  padding-bottom: 12px;
   margin-top: 30px;
   font-size: 13px;
   font-weight: 400;
