--- a/app/assets/stylesheets/react/_comment.scss
+++ b/app/assets/stylesheets/react/_comment.scss
@@ -16,7 +16,7 @@
 }
 
 .comment-container-selected {
-  box-shadow: 0 0 10px $color-focus;
+  box-shadow: 0 0 10px $color-gray-dark;
 }
 
 .comment-container {
