--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -201,7 +201,7 @@ svg[aria-hidden=true],
   }
 }
 
-.cf-heading-comments {
+.cf-sidebar-heading {
   border-bottom: 1px solid $color-gray-lighter;
   padding-bottom: 12px;
   margin-top: 30px;
@@ -209,6 +209,10 @@ svg[aria-hidden=true],
   font-weight: 400;
   line-height: 17px;
   text-transform: uppercase;
+}
+
+.cf-sidebar-heading-related-issues {
+  margin-top: 0px;
 }
 
 .cf-add-comment-button {
@@ -294,7 +298,6 @@ svg[aria-hidden=true],
 .cf-document-category-picker {
   list-style-type: none;
   padding-left: 0;
-  padding-bottom: 5px;
 
   .cf-category-selector {
     display: flex;
