Contextual main menu help link
Connects #1435 and #1525

--- a/app/views/help/dispatch.html.erb
+++ b/app/views/help/dispatch.html.erb
@@ -1,3 +1,4 @@
+<% content_for :page_title do %>&nbsp &#124; &nbsp Help<% end %>
 
 <div class="cf-app-segment cf-app-segment--alt cf-help-content cf-dispatch">
   <h1 id="#top">Welcome to the Dispatch Help Page!</h1>
