--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,17 @@
   <% end %>
 
   <%= stylesheet_link_tag    'application', media: 'all' %>
+
+  <!--
+    In production, this will include our compiled assets (jQuery and React)
+    In development, this includes *only* our old javascript (jQuery only)
+  -->
   <%= javascript_include_tag 'application' %>
+
+  <% if Rails.env.development? %>
+    <%= env_javascript_include_tag(hot: ['http://localhost:3500/webpack-bundle.js']) %>
+  <% end %>
+
   <%= csrf_meta_tags %>
 
   <% if content_for?(:head) %><%= yield :head %><% end %>
