--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -95,3 +95,18 @@ pre {
 .styleguide-grey-header {
   color: $color-gray;
 }
+
+.sg-nav-bar {
+  .cf-nav {
+    padding-top: 26px;
+    padding-bottom: 26px;
+
+    #cf-logo-link {
+      margin-left: 100px;
+    }
+
+    .cf-nav-dropdown {
+      margin-right: 100px;
+    }
+  }
+}
