more style changes

--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -101,7 +101,7 @@ pre {
     padding-top: 26px;
     padding-bottom: 26px;
 
-    #cf-logo-link {
+    .cf-logo {
       margin-left: 100px;
     }
 
