--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -100,6 +100,7 @@ pre {
   .cf-nav {
     padding-top: 26px;
     padding-bottom: 26px;
+    border: 1px solid $color-gray-lighter;
 
     .cf-logo {
       margin-left: 100px;
