Fixing scss lint

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -210,7 +210,7 @@ svg[aria-hidden=true],
 }
 
 .cf-sidebar-heading-related-issues {
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 .cf-add-comment-button {
